js/src/tests/test262/language/expressions/dynamic-import/syntax/valid/nested-do-while-nested-imports.js
do
{
import
(
import
(
import
(
'
.
/
empty_FIXTURE
.
js
'
)
)
)
;
}
while
(
false
)
;
reportCompare
(
0
0
)
;
