js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-function-import-defer-no-new-call-expression.js
DONOTEVALUATE
(
)
;
function
fn
(
)
{
new
import
.
defer
(
'
.
/
empty_FIXTURE
.
js
'
)
;
}
